config/dashboard-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-oauth2-forwardauth@kubernetescrd

  name: dashboard
  namespace: kube-system
spec:
  rules:
    - host: dashboard.tgu.ovh
      http:
        paths:
          - backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 443
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - dashboard.tgu.ovh
      secretName: dashboard.tgu.ovh-tls
