config/freshrss-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: freshrss
  namespace: selfhost
spec:
  rules:
    - host: freshrss.tgu.ovh
      http:
        paths:
          - backend:
              service:
                name: freshrss
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - freshrss.tgu.ovh
      secretName: freshrss.tgu.ovh-tls
