config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: argocd
  name: argocd-public-ingress
spec:
  rules:
    - host: argocd.tgu.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: mlrun
  name: mlrun-ui-public-ingress
  annotations:
    traefik.ingress.kubernetes.io/rewrite-target: /ui
spec:
  rules:
    - host: mlrun.tgu.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mlrun-ui
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: mlrun
  name: mlrun-jupyter-public-ingress
  annotations:
    traefik.ingress.kubernetes.io/rewrite-target: /ui
spec:
  rules:
    - host: jupyter.tgu.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mlrun-kit-jupyter
                port:
                  number: 8888
