config/jupyterlab-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: jupyterhub
  name: jupyterhub-ingress
  namespace: datalab
spec:
  rules:
    - host: jupyter.home.lan
      http:
        paths:
          - backend:
              service:
                name: proxy-public
                port:
                  name: http
            path: /
            pathType: Prefix
