config/kubeflow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: kubeflow
  name: kubeflow-ingress
  namespace: kubeflow
spec:
  rules:
    - host: kubeflow.home.lan
      http:
        paths:
          - backend:
              service:
                name: kistio-ingressgateway
                port:
                  number: 8080
            path: /
            pathType: Prefix
