config/kubeflow-ingressRoute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: istio-ingressgateway-web-tls
  namespace: istio-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`kubeflow.home.lan`) && PathPrefix(`/`)
      services:
        - name: istio-ingressgateway
          port: 32035
  tls:
    certResolver: kubeflow.home.lan
