config/mlrun-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlrun-ui-ingress
  namespace: mlrun
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    ingress.pomerium.io/allowed_users: |
      - laboitatom@gmail.com
    ingress.pomerium.io/allow_websockets: 'true'
spec:
  rules:
    - host: mlrun.tgu.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mlrun-ui
                port:
                  number: 80
  tls:
    - hosts:
        - mlrun.tgu.ovh
      secretName: mlrun-tls-cert
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nuclio-ingress
  namespace: mlrun
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    ingress.pomerium.io/allowed_users: |
      - laboitatom@gmail.com
    ingress.pomerium.io/allow_websockets: 'true'
spec:
  rules:
    - host: nuclio.tgu.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nuclio-dashboard
                port:
                  number: 8070
  tls:
    - hosts:
        - nuclio.tgu.ovh
      secretName: mlrun-tls-cert
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: mlrun
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    ingress.pomerium.io/allowed_users: |
      - laboitatom@gmail.com
    ingress.pomerium.io/allow_websockets: 'true'
spec:
  rules:
    - host: minio.tgu.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000
  tls:
    - hosts:
        - minio.tgu.ovh
      secretName: minio-tls-cert
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pipeline-ingress
  namespace: mlrun
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    ingress.pomerium.io/allowed_users: |
      - laboitatom@gmail.com
    ingress.pomerium.io/allow_websockets: 'true'
spec:
  rules:
    - host: pipeline.tgu.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ml-pipeline-ui
                port:
                  number: 80
  tls:
    - hosts:
        - pipeline.tgu.ovh
      secretName: pipeline-tls-cert
