config/traefik-ingressRoute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.home.lan`) && PathPrefix(`/`)
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: star-certificate
